@startuml
skinparam classAttributeIconSize 0
class UnidadTierra {
+ Area moverse(AreaTierra,Area)
+ Area moverse(AreaEspacial,Area)
+ int recibirDanio(int,int)
}
abstract class TipoUnidad {
+ {abstract}Area moverse(AreaTierra,Area)
+ {abstract}Area moverse(AreaEspacial,Area)
+ {abstract}int recibirDanio(int,int)
}
class UnidadAire {
+ Area moverse(AreaTierra,Area)
+ Area moverse(AreaEspacial,Area)
+ int recibirDanio(int,int)
}


TipoUnidad <|-- UnidadTierra
TipoUnidad <|-- UnidadAire
@enduml